force-app/main/default/objects/Voucher__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excel</fullName>
            </value>
            <value>
                <fullName>Tally</fullName>
            </value>
            <value>
                <fullName>ERP</fullName>
            </value>
            <value>
                <fullName>Other CRM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>