force-app/main/default/objects/Voucher__c/fields/Voucher_Data__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voucher Data</label>
    <referenceTo>Voucher_Data__c</referenceTo>
    <relationshipLabel>Vouchers</relationshipLabel>
    <relationshipName>Vouchers</relationshipName>
    <type>Lookup</type>
</CustomField>