force-app/main/default/objects/Voucher__c/fields/VoucherNumber__c.field-meta.xml
<CustomField>
    <fullName>VoucherNumber__c</fullName>
    <label>VoucherNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>